InsuranceOrg/force-app/main/default/objects/vlocity_ins__ConsumerProvider__c/vlocity_ins__ConsumerProvider__c.object-meta.xml
<CustomObject>
    <description>Represents the list of a health plan member’s service providers such as  physicians, specialists, dentist etc. Master-detail child object of the Contact.</description>
    <label>Consumer Provider</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consumer Providers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>