InsuranceOrg/force-app/main/default/objects/vlocity_ins__ConsumerProvider__c/fields/vlocity_ins__ConsumerAccountId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ConsumerAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consumer Account Id</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>StandardAccount</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Consumer Providers (Consumer Account)</relationshipLabel>
    <relationshipName>ConsumerProviderConsumerAccount</relationshipName>
    <type>Lookup</type>
</CustomField>