InsuranceOrg/force-app/main/default/objects/vlocity_ins__ConsumerProvider__c/fields/vlocity_ins__ConsumerContactId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ConsumerContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consumer Contact Id</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Consumer Providers (Consumer Contact)</relationshipLabel>
    <relationshipName>ConsumerContactProviders</relationshipName>
    <type>Lookup</type>
</CustomField>