InsuranceOrg/force-app/main/default/objects/vlocity_ins__ConsumerProvider__c/fields/vlocity_ins__RelationshipLength__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__RelationshipLength__c</fullName>
    <formula>TODAY() -  vlocity_ins__EffectiveStartDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relationship Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>